@@ -6,7 +6,7 @@ my $git;
 if (
     -d '.git'
     and
-    eval { $git = `git ls-tree --name-status -r HEAD | egrep -v '^\.(git|be)'` }
+    eval { $git = `git ls-tree --name-status -r HEAD | egrep -v '^\.git'` }
   )
 {
     plan( tests => 1 );
@@ -18,4 +18,4 @@ else {
 
 my $manifest = `cat MANIFEST`;
 
-ok( $git eq $manifest, 'MANIFEST up to date' );
+is( $git, $manifest, 'MANIFEST up to date' );
